# PGK

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
common/: shader.cpp
engine/: Body.hpp  Drawable.cpp  Drawable.hpp  FragmentShaderA.fragmentshader  Light.cpp  Light.hpp  MainVertexShader.vertexshader  ModelBase.cpp  ModelBase.hpp  Node.cpp  Node.hpp  Positionable.cpp  Positionable.hpp  Render.cpp  Render.hpp  SimplePhysics.cpp  SimplePhysics.hpp  Text.cpp  Text.hpp  VertexShaderA.vertexshader  Viewpoint.cpp  Viewpoint.hpp  World.cpp  World.hpp
engine-old/: Drawable.cpp  Drawable.hpp  ModelBase.cpp  SimplePhysics.hpp
models/: untitled.mtl
tutorial01_first_window/: tutorial01_first_window
zad2/: BoardVertexShader.vertexshader  FragmentShader.fragmentshader  TextFragmentShader.fragmentshader  VertexShader.vertexshader  fonts.hpp  models.cpp  zad2  zad2.cpp
zad2-old/: SimpleFragmentShader.fragmentshader  SimpleFragmentShader.fragmentshader~  SimpleVertexShader.vertexshader  SimpleVertexShader.vertexshader~  tutorial02.cpp
zadanie2/: BoardVertexShader.vertexshader  TextFragmentShader.fragmentshader  TextVertexShader.vertexshader  fonts.cpp  game.cpp  game.hpp  main.cpp  models.cpp  models.hpp  render.cpp  render.hpp  shader.cpp
zadanie3/: Background.cpp  Background.hpp  Ball.cpp  Ball.h  Ball.hpp  Board.cpp  Board.h  Board.hpp  Brick.cpp  Brick.h  Brick.hpp  Drawable.cpp  Drawable.h  MainVertexShader.vertexshader  ModelBase.cpp  ModelBase.h  Overlay.cpp  Overlay.hpp  Paddle.cpp  Paddle.h  Paddle.hpp  Positionable.cpp  Positionable.h  Render.cpp  Render.h  TextFragmentShader.fragmentshader  body.cpp  body.h  fonts.cpp  main.cpp  shader.cpp  shader.hpp  simplephysics.cpp  simplephysics.h  zadanie3
zadanie3/engine/: Fonts.hpp  MainVertexShader.vertexshader  ModelBase.hpp  Render.cpp  Shader.cpp  Signal.hpp  Text.cpp
zadanie4/: Ball.cpp  Ball.hpp  Bubble.cpp  Bubble.hpp  Cube.cpp  Cube.hpp  Plane.cpp  Plane.hpp  Player.cpp  Player.hpp  main.cpp  main.hpp
zadanie4/engine/: Drawable.cpp  Drawable.hpp  Fonts.cpp  FragmentShaderA.fragmentshader  Light.cpp  ModelBase.cpp  ModelBase.hpp  Node.cpp  Node.hpp  Render.cpp  Render.hpp  Viewpoint.hpp
zadanie5/: GridFragmentShader.fragmentshader  GridVertexShader.vertexshader  Render.cpp  Render.hpp  TerrainFragmentShader.fragmentshader  TerrainVertexShader.vertexshader  TextFragmentShader.fragmentshader  TextVertexShader.vertexshader  Tile.cpp  Tile.hpp  Viewpoint.cpp  Viewpoint.hpp  main.cpp  zadanie5
zadanie6/: BasicFragmentShader.fragmentshader  BasicVertexShader.vertexshader  Fonts.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjParser.cpp  ObjParser.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Text.cpp  Text.hpp  TextVertexShader.vertexshader  TextureLoader.cpp  TextureLoader.hpp  Toon2FragmentShader.fragmentshader  Toon2GeometryShader.geometryshader  Toon3FragmentShader.fragmentshader  Toon3GeometryShader.geometryshader  Toon3VertexShader.vertexshader  ToonFragmentShader.fragmentshader  Viewpoint.cpp  Viewpoint.hpp  main.cpp  zadanie6
